# array-view

./: CMakeLists.txt  README.md
.github/workflows/: gtest.yml
lib/: Array.cpp  Array.h  Array3DView.cpp  Array3DView.h  CMakeLists.txt  UInt17View.cpp  UInt17View.h  array.cc  array.h  array_2d_view.cc  array_2d_view.h  array_3d_view.cc  array_3d_view.h  array_n_view.h  array_view.cc  array_view.h  uint17_view.cc  uint17_view.h  utils.h
src/: CMakeLists.txt
src/tests/: array3d_test.cpp
src/uint17/: CMakeLists.txt  array.cc  array.h  array_view.h  array_with_vectors_view.h  uint17_view.cc  uint17_view.h  utils.h
tests/: array3d_test.cpp
uint17/: CMakeLists.txt  array.cc  array_view.h
